Refactor code
- Remove AuthRequest, AuthResponse and return UserDto instead
- Remove untest function viewVideo
- Remove RatingRequest, RatingReponse and return VideoRatingDto instead